<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="186dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:text="@string/btn1_text"
        app:layout_constraintEnd_toStartOf="@+id/btn4"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/btn2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="137dp"
        android:layout_height="71dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:text="@string/btn5_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:text="@string/btn3_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:text="@string/btn6_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="66dp"
        android:text="@string/text_msg"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="37dp" />
</androidx.constraintlayout.widget.ConstraintLayout>